# PICO_LCD

./: .gitignore  README.md
EasyEDA/: PCB_pcb_pico_lcd_2023-05-07.json  PCB_pcb_pico_lcd_2023-05-14.json  SCH_PICO_LCD_2023-05-07.json  SCH_PICO_LCD_2023-05-14.json
firmware/: pico_lcd_v1.uf2  pico_lcd_v2.uf2
pico_lcd/: CMakeLists.txt  pico_lcd.c
